# shared-notes

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 67860367e893_initial_migration_create_pastes_table_.py
docs/: API_DESIGN.md  ARCHITECTURE.md  MVP_PLAN.md  REQUIREMENTS.md  TECH_STACK.md  TESTING.md
src/: app.py  dependencies.py  models.py  snowflake.py
src/api/: __init__.py  models.py  pastes.py
src/storage/: __init__.py  base.py  factory.py  memory.py  sql.py  utils.py
src/storage/db/: __init__.py  connection.py  models.py
tests/: __init__.py  conftest.py  test_migrations.py  test_pastes.py  test_snowflake.py  utils.py
tests/api/: test_health.py  test_pastes.py
tests/unit/: test_snowflake.py  test_storage.py
