[project]
name = "shared-notes"
version = "0.1.0"
description = "A simple notes sharing service (paste bin)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0",
	"pytest-asyncio>=0.24.0",
	"httpx>=0.27.0",
]
