[project]
name = "shared-notes"
version = "0.1.0"
description = "A simple notes sharing service (paste bin)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-alembic>=0.11.0",
    "pytest-env>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "N", "W", "B"]  # Removed "I" to avoid conflict with isort
ignore = [
    "B008",  # fastapi.Depends() in function defaults is intentional
]

[tool.ruff.format]
indent-style = "space"
quote-style = "preserve"

[tool.black]
line-length = 120
target-version = ["py313"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
env = [
    "DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/shared_notes_test",
    "POSTGRES_USER=postgres",
    "POSTGRES_PASSWORD=postgres",
    "POSTGRES_HOST=localhost",
    "POSTGRES_PORT=5432",
]
